--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
-server.port=8082
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+server.port=8083
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/issuemanagement
+spring.datasource.username=postgres
+spring.datasource.password=321
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#CodeFirst
+spring.jpa.hibernate.ddl-auto=update
+
