--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #CodeFirst
 spring.jpa.hibernate.ddl-auto=update
 
+
+logging.level.root = INFO
+logging.level.org.springframework.web= DEBUG
+logging.level.org.hibernate=DEBUG
